syntax = "proto3";

package order;

option go_package = "github.com/57ajay/KRafka/proto";

import "google/protobuf/timestamp.proto";

message Order {
  string order_id = 1;
  string user_id = 2;
  repeated string item_ids = 3; // as an order can have multiple items.
  google.protobuf.Timestamp timestamp = 4;
}

message CreateOrderRequest { Order order = 1; }

message CreateOrderResponse { string order_id = 1; }

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}
